packages/typ/tests/fixtures/diagnostics/0378_labels_wrong_y_type_07.ml.expected
File "0378_labels_wrong_y_type_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0378_labels_wrong_y_type_07 is not a valid module name.

File "0378_labels_wrong_y_type_07.ml", line 2, characters 25-26:
2 | let _ = pick_eta ~x:6 ~y:7
                             ^
Error: The constant 7 has type int but an expression was expected of type
         bool
