packages/typ/tests/fixtures/diagnostics/0378_labels_wrong_y_type_07.ml
let pick_eta ~x:(x : int) ~y:(y : bool) = x
let _ = pick_eta ~x:6 ~y:7
